# langchain_zhipuai

./: .gitignore  README.md  agent.ipynb  basic.ipynb  langchain.ipynb  pyproject.toml  requirements.txt  setup.py  usage.ipynb
.ipynb_checkpoints/: usage-checkpoint.ipynb
langchain_zhipu/: __init__.py  __version__.py  _client.py  _langchain.py  chat.py  embeddings.py  http.py  utils.py
langchain_zhipu/api_resource/: __init__.py  base.py  knowledge.py
langchain_zhipu/api_resource/knowledge/: base.py
langchain_zhipu/core/: _base_type.py  _http_client.py  _request_opt.py  _response.py
langchain_zhipu/http/: api.py  base.py  chat.py  embeddings.py  env.py  manager.py  types.py
langchain_zhipu/knowledge/: api.py  base.py  chat.py  enum.py  types.py
langchain_zhipu/types/: image.py  knowledge.py
langchain_zhipu/types/chat/: async_chat_completion.py
langchain_zhipu/types/fine_tuning/: fine_tuning_job_event.py
langchain_zhipu/types/knowledge/: base.py  embeddings.py
langchain_zhipuai/: __init__.py  __version__.py
langchain_zhipuai/core/: _http_client.py
langchain_zhipuai/types/: file_object.py
notes/: agent.ipynb  embedding.ipynb  knowledge.ipynb  knowledge_app.ipynb  tokens.ipynb  usage.ipynb
tests/: test_zhipu.py
zhipuai/core/: _request_opt.py
zhipuai_pydantic_v1/: __version__.py
zhipuai_pydantic_v1/core/: _request_opt.py
zhipuai_pydantic_v1/pydantic_v1/: __init__.py
zhipuai_pydantic_v1/types/: embeddings.py  file_object.py  image.py
zhipuai_pydantic_v1/types/chat/: async_chat_completion.py  chat_completion.py  chat_completion_chunk.py
zhipuai_pydantic_v1/types/fine_tuning/: fine_tuning_job.py  fine_tuning_job_event.py
