[tool.poetry]
name = "zhipuai_pydantic_v1"
version = "2.0.1"
description = "dowgrade v1 for langchain (zhipu is an SDK library for accessing big model apis from ZhipuAI)"
authors = ["arcstep <43801@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx ="^0.23.0"
pydantic = "1.10.13"
cachetools = "4.2.2"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
ipykernel = "^6.29.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
