[tool.poetry]
name = "zhipuai_pydantic_v1"
version = "4.0.4"
description = "downgrade zhipu api to pydantic v1 and prepare for langchain"
authors = ["arcstep <43801@qq.com>"]
homepage = "https://github.com/arcstep/zhipuai-sdk-python-v4"
repository = "https://github.com/arcstep/zhipuai-sdk-python-v4.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx ="^0.23.0"
pydantic = ">=1,<3"
cachetools = "4.2.2"
pyjwt = "^2.8.0"
langchain = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
ipykernel = "^6.29.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
