[tool.poetry]
name = "langchain_zhipu"
version = "4.1.4"
description = "将智谱AI集成到LangChain"
license = "MIT"
authors = ["arcstep <43801@qq.com>"]
homepage = "https://github.com/arcstep/langchain_zhipuai"
repository = "https://github.com/arcstep/langchain_zhipuai.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx ="^0.23.0"
pydantic = ">=1,<3"
cachetools = "4.2.2"
pyjwt = "^2.8.0"
langchain = "^0.1.0"
tqdm = "^4.66.2"
regex = "^2024.4.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
ipykernel = "^6.29.2"
python-dotenv = "^1.0.1"
langchain-experimental = "^0.0.52"
pandas = "^2.2.0"
tabulate = "^0.9.0"
langchain-openai = "^0.0.6"
dashscope = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
